refactor teacher classes