@@ -3,22 +3,24 @@ package com.example.demo.teacher;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class TeacherService {
 
-    private TeacherRepository repository;
+    private final TeacherRepository repository;
 
-    private final TeacherTDOMapper teacherTDOMapper;
 
-    public TeacherService(TeacherRepository repository, TeacherTDOMapper teacherTDOMapper) {
+    public TeacherService(TeacherRepository repository) {
         this.repository = repository;
-        this.teacherTDOMapper = teacherTDOMapper;
     }
 
 
     public List<TeacherTDO> getTeachers() {
-        return repository.findAll().stream().map(teacher -> teacherTDOMapper.apply(teacher)).collect(Collectors.toList());
+        return repository.findAll().stream().map(TeacherTDOMapper.INSTANCE::toTDO).toList();
+    }
+
+    public TeacherTDO addTeacher(TeacherTDO teacherTDO) {
+        Teacher teacher = repository.save(TeacherTDOMapper.INSTANCE.toTeacher(teacherTDO));
+        return TeacherTDOMapper.INSTANCE.toTDO(teacher);
     }
 }
